<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameContainer_clas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.clasificacion.ClasificacionFragment"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    app:layout_constraintBottom_toTopOf="@+id/nav_view">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="108dp"
        app:cardBackgroundColor="#0A0E29">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoLiga"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="20dp"
                android:contentDescription="TODO" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="25dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tVnombreliga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Liga Santander"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tVtempliga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2022/2023"
                    android:textColor="#F4F2F2"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabClas"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:tabIconTint="@color/green4"
        app:tabSelectedTextColor="@color/green4"
        app:tabTextColor="@color/white"
        android:textSize="11sp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESULTADOS" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CLASIFICACIÓN" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GOLEADORES" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frameClas"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>


</FrameLayout>
