<resources>
    <string name="app_name">Golaso</string>
    <string name="icon_fav">Favoritos</string>
    <string name="icon_clasificacion">Clasificación</string>
    <string name="icon_perfil">Perfil</string>
    <string name="icon_partidos">Partidos</string>
    <string name="icon_buscar">Buscar</string>
    <string name="title_search">Búsqueda</string>
    <string name="title_fav">Favoritos</string>
    <string name="title_profile">Perfil</string>
...
