<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/equipoLayout"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.elementos.EquipoDetailFragment"
    app:layout_constraintBottom_toTopOf="@+id/nav_view">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardBackgroundColor="#0A0E29">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoEquipo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="20dp"
                android:contentDescription="TODO" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tVNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nombre"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tVUbi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ubicación:"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tVEstadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Estadio:"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tVEntrenador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Entrenador:"
                    android:textColor="#F4F2F2"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shareTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:src="@drawable/ic_share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabEquipo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:tabIconTint="@color/green4"
        app:tabSelectedTextColor="@color/green4"
        app:tabTextColor="@color/white"
        android:textSize="11sp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JUGADORES" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESULTADOS" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frameEquipo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
